# CellSam2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py  train_ctc.py
adapters/: adapter_modules.py  sam2_lora_model.py
inference/: cell_segmenter.py  cell_tracker.py  inference_utils.py  segment.py  track_cells.py
sam2/: automatic_mask_generator.py  build_sam.py  sam2_image_predictor.py  sam2_video_predictor.py  sam2_video_predictor_legacy.py
sam2/configs/sam2.1/: sam2.1_hiera_b+.yaml
sam2/configs/sam2.1_training/: sam2.1_ctc_finetune.yaml  sam2.1_ctc_finetune_cpu.yaml
sam2/modeling/: memory_attention.py  sam2_base.py  sam2_utils.py
sam2/modeling/backbones/: hieradet.py
sam2/modeling/sam/: mask_decoder.py  prompt_encoder.py  transformer.py
sam2/utils/: misc.py  transforms.py
training/: README.md  loss_fns.py  optimizer.py  train.py  trainer.py
training/dataset/: sam2_datasets.py  transforms.py  vos_dataset.py  vos_raw_dataset.py  vos_sampler.py  vos_segment_loader.py
training/model/: sam2.py
training/utils/: checkpoint_utils.py  data_utils.py  logger.py  train_utils.py
